umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@rdkit_0000_CCc1ncc(NC(=O)NCc2c(_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: opensmiles
category: opensmiles
basic_opensmiles:
  success: false
  error:
    error_type: InvalidBracket
    message: Invalid bracket at position 32
opensmiles:
  success: true
  summary:
    sum_formula: C14BrN4O2*
    atom_count: 22
    bond_count: 23
