umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@rdkit_0001_O=C(Nc1ccnc(I)c1)Nc1_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: opensmiles
category: opensmiles
basic_opensmiles:
  success: false
  error:
    error_type: InvalidBracket
    message: Invalid bracket at position 25
opensmiles:
  success: true
  summary:
    sum_formula: C9IN4OS*
    atom_count: 17
    bond_count: 18
